--- a/band-name-generator/src/index.html
+++ b/band-name-generator/src/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Band Name Generator</title>
-    <link href="styles.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>Band Name Generator</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="app.js" defer></script>
 </head>
-<body class="bg-gray-100 flex items-center justify-center h-screen">
-    <div class="bg-white p-8 rounded-lg shadow-md text-center">
-        <h1 class="text-2xl font-bold mb-4">Band Name Generator</h1>
-        <button id="generate-button" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Generate Band Name</button>
-        <p id="band-name" class="mt-4 text-xl"></p>
-    </div>
-    <script src="app.js"></script>
+<body class="bg-gradient-to-br from-indigo-500 to-pink-400 min-h-screen flex items-center justify-center">
+  <div class="bg-white bg-opacity-90 rounded-xl shadow-2xl p-8 flex flex-col items-center max-w-md w-full">
+    <h1 class="text-3xl font-extrabold text-gray-800 mb-6 text-center">Band Name Generator</h1>
+    <div id="band-name" class="text-2xl font-bold text-indigo-700 mb-8 min-h-[2.5rem] opacity-0 transition-opacity duration-500"></div>
+    <button id="generate-button"
+      class="px-6 py-3 bg-indigo-600 text-white rounded-lg font-semibold shadow hover:bg-indigo-700 transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-indigo-400">
+      Generate Name
+    </button>
+  </div>
+  <script>
+    // Optional: Fade-in animation for band name
+    document.addEventListener("DOMContentLoaded", () => {
+      const bandNameDiv = document.getElementById("band-name");
+      document.getElementById("generate-button").addEventListener("click", () => {
+        bandNameDiv.classList.remove("opacity-0");
+        bandNameDiv.classList.add("opacity-100");
+      });
+    });
+  </script>
 </body>
 </html>
